# Metagente

./: Dataset.csv  Dataset_checkstyle.csv  Dataset_parsed.csv  Introduzione_AI_per_studenti_superiori.pptx  README.md  checstyle_paper.py  copilot-example.py  copilot-example.text  test.py
AUSE/DATA_PREPROCESS/: Data_preprocess.ipynb  EDA_Googleplay-3.ipynb  data_split.py
AUSE/EDA/: Dynamic_vs_Non-3.ipynb  Metagente_train_iter.py
AUSE/METAGENTE/Ablations/Metagente-noR/METAGENTE/: pyproject.toml  requirements.txt
AUSE/METAGENTE/Ablations/Metagente-noR/METAGENTE/agent/: analysis.py  extractor.py  prompt_combine.py  temp.py
AUSE/METAGENTE/Ablations/Metagente-noR/METAGENTE/data/: test_random_400.csv  test_random_600.csv
AUSE/METAGENTE/Ablations/Metagente-noR/METAGENTE/prompt/: prompt.py  prompt_teach_noR.py  run_1.csv
AUSE/METAGENTE/Ablations/Metagente-noR/METAGENTE/result/: run_1.csv
AUSE/METAGENTE/Ablations/Metagente-noR/METAGENTE/result/parallel/: avg_Rouge.py  new_sys.csv  noR2_600.csv  noR3_600.csv  noR_400.csv  noR_600.csv  rouge_12L_summary.csv  rouge_sbert_bertscore_mean_std.csv  train_result.csv
AUSE/PROMPT/: Metagente.txt  Single_agent.txt
Baselines/: LLAMA_SUMMARY.py
Data/: TS50.csv
Data/android_zoo_app/: extract_highest_version.py  parse.py
METAGENTE/: .gitignore  README.md  evaluation.py
METAGENTE/agent/: analysis_summarizer.py  extractor.py  prompt_combine.py  sequential_teacher.py  summarizer.py  teacher.py
METAGENTE/data/: data.ipynb
Results/: GITSUM_TS10.txt  GITSUM_TS50.txt
Tools/: GITSUM.py  LLAMA_SUMMARY.py
(+14547 files in other folders)
