[project]
description = "Add your description here"
name = "prj-multi-agent"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"
dependencies = [
    "openai==1.56.1",
    "pandas==2.2.3",
    "pymongo==4.10.1",
    "python-dotenv==1.0.1",
    "rouge-score==0.1.2",
    "tiktoken>=0.11.0",
]
